[package]
name = "fig"
version = "0.1.0"
description = "Manage your AI configs, skills, agents and workflows across every harness."
authors = ["Fig Contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "Fig"
path = "src/main.rs"

[lib]
name = "fig_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
